# CCLC-Queue-Django

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
apache/: cclc_queue.conf
cclc_queue/: asgi.py  settings.py  urls.py  wsgi.py
cclc_queue/auth/backends/: canvas.py
question_queue/: admin.py  apps.py  consumers.py  factories.py  forms.py  middleware.py  models.py  routing.py  urls.py  views.py
question_queue/management/commands/: create_app_data.py  delete_app_data.py
question_queue/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py  0003_alter_enrolledin_options_alter_reply_options.py  0003_alter_user_options.py  0003_create_groups.py  0004_question_hidden_queuequestion.py  0005_alter_queuequestion_answered_by.py  0006_alter_assignment_id_alter_canvascourse_id.py  0006_queuequestion_attending.py  0007_queuequestion_attending.py  0007_supportedcourse_name.py  0008_add_supportedcourses.py  0008_supportedcourse_name.py  0009_add_supportedcourses.py  0009_alter_question_options_alter_assignment_course_and_more.py  0010_alter_question_options_alter_assignment_course_and_more.py
question_queue/static/question_queue/: style.css
question_queue/static/question_queue/css/: style.css
question_queue/templates/question_queue/: bootstrap.html  coach.html  forum.html  index.html  instructor.html  question.html  question_modal.html  question_table.html  question_table_row.html  student.html
question_queue/templates/question_queue/forum/: forum.html  question_detailed.html
question_queue/templates/question_queue/student/: alert.html  ask_a_question.html  ask_question_btn.html  base.html  position_modal.html  queue_position.html  student.html
question_queue/templates/question_queue/student/old_grails/: row3.html  student.gsp
question_queue/templates/question_queue/student/row1/: component1.html
question_queue/templates/question_queue/student/row2/: component2.html
question_queue/templates/question_queue/student/row3/: nav.html  (+2 more)
question_queue/util/: group.py
scripts/: bootstrap.sh  deploy.sh
(+2 files in other folders)
