[tool.poetry]
name = "cclc_queue"
version = "0.1.0"
description = ""
authors = ["HIDE <hide-management-l@mtu.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
django-crispy-forms = "^1.14.0"
psutil = "^5.9.4"
crispy-bootstrap5 = "^0.7"
orjson = "^3.8.0"
channels = "^3.0.5"
channels-redis = "^3.4.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.10.27"
flake8-comprehensions = "^3.10.1"
ipython = "^8.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
extend-exclude = '''
migrations
'''

[tool.isort]
profile = "black"
